--- a/todo.txt
+++ b/todo.txt
@@ -1,20 +1,27 @@
 
 
 
-............ test ...............
 
-............ texte établi ? .............
-
-
-
+############## 
+## TODO
 ##############
-## DECISO
-##############
+
+
+
+
+####################
+## DECISO e CAPITO
+####################
 
 Nel fondo ci sono anche oggetti, documenti amministrativi, coupures de presse ... vogliamo inserire tutto questo? No ..., solo manoscritti. Tutto il resto sta bene in una nota, senza che debba avere il suo posto nella BD.
 
-Commenti almeno in due lingue
+Commenti almeno in due lingue (en, fr). Label: fr, en, de.
 
+Dans Knora pour chaque classe il y a en plus une proprieté Label, obligatoire! Les liens outilisent ça.
+
+Les liens StandoffLinkTo peuvent se faire entre toutes les classes, pas besoin de spécifier (par exemple, pour notice)
+
+Lieux, pas d'organisation hiérarchique, parce que chez Roud tout est canton de Vaud.
 
 
 
@@ -32,18 +39,6 @@ Commenti almeno in due lingue
 ##########################
 ## CHIEDERE A MARION
 ##########################
-
-isPartOfCollection
-
-ParentClass inherits properties going in and out?
-
-isPreviousStageOfPartOfCollection
-
-toutes ces choses vont avoir un id?
-
-Spécifier l'utilisation de hasPages
-
-
 
 
 
