--- a/todo.txt
+++ b/todo.txt
@@ -6,15 +6,13 @@
 ## TODO
 ##############
 
-Correggere onto (anche gui order) e aggiungere lists, usando SalsahDemo.
+Check label classes abtraites (caricare l'ultima versione dell'ontologia)
 
-------> GUI ORDER
-DOCUMENT
-writtenSourceHasTitle		salsah-gui:guiOrder "0"^^xsd:integer
-writtenSourceIsInArchive	salsah-gui:guiOrder "1"^^xsd:integer
-writtenSourceHasShelfmark	salsah-gui:guiOrder "2"^^xsd:integer
+Check ordine properties
 
+Inserire dati per tutte
 
+Pull request
 
 
 
@@ -47,14 +45,14 @@ Lieux, pas d'organisation hiérarchique, parce que chez Roud tout est canton de 
 
 
 ##########################
-## DEMANDER À MARION
+## QUESTIONS DASCH
 ##########################
 
 Où sont exploités les commentaires des propriétés ?
 Les indication sur comment remplir les champs (par example, poru les titres des documents "Pas de guillemets. Les titres-incipit sont donnés entre crochets, avec trois points à la fin (alt + .).") se mettent où, dans les commentaires ?
 Indications sur comment remplir le Label, vont où (en général on pourrait se dire que le label corresponde au titre, mais par exemple pour les évènements biographique c'est plus interessant d'avoir la date aussi) ? Dans un protocole externe ?
 
-
+Possibilités de recherche dans Salsah (API) ? Recherche partout ?
   
 
 
