--- a/todo.txt
+++ b/todo.txt
@@ -54,6 +54,8 @@ Les indication sur comment remplir les champs (par example, poru les titres des 
 Indications sur comment remplir le Label, vont où (en général on pourrait se dire que le label corresponde au titre, mais par exemple pour les évènements biographique c'est plus interessant d'avoir la date aussi) ? Dans un protocole externe ? Par exemple, pour les personnes, ça serait bien que les labels soit nom+prenom, parceque la recherche (pendant la saisie) se fait sur les premières trois lettres et ce n'est pas toujours facile de se souvenir des prénom (ou le contraire? Mais tenir en compte).
 
 Y-a-t il un moyen de ne pas faire apparaître les classes abstraites dans Salsah ?
+
+Period: before / after / around; après / avant / vers
   
 
 
