to do atfer first colleagues tests

--- a/todo.txt
+++ b/todo.txt
@@ -6,15 +6,9 @@
 ## TODO
 ##############
 
-Check label classes abtraites (caricare l'ultima versione dell'ontologia)
+Auteur traduit dans Document d'archive
 
-Check ordine properties
-
-Inserire dati per tutte
-
-Pull request
-
-
+Repris dans
 
 
 ####################
@@ -52,8 +46,6 @@ Anche i dati cancellati rimangono.
 Où sont exploités les commentaires des propriétés ?
 Les indication sur comment remplir les champs (par example, poru les titres des documents "Pas de guillemets. Les titres-incipit sont donnés entre crochets, avec trois points à la fin (alt + .).") se mettent où, dans les commentaires ?
 Indications sur comment remplir le Label, vont où (en général on pourrait se dire que le label corresponde au titre, mais par exemple pour les évènements biographique c'est plus interessant d'avoir la date aussi) ? Dans un protocole externe ? Par exemple, pour les personnes, ça serait bien que les labels soit nom+prenom, parceque la recherche (pendant la saisie) se fait sur les premières trois lettres et ce n'est pas toujours facile de se souvenir des prénom (ou le contraire? Mais tenir en compte).
-
-Y-a-t il un moyen de ne pas faire apparaître les classes abstraites dans Salsah ?
 
 Period: before / after / around; après / avant / vers
   
