--- a/todo.txt
+++ b/todo.txt
@@ -1,22 +1,57 @@
 
 
-
-
-############## 
+###################
+##
 ## TODO
-##############
+##
+###################
 
-Auteur traduit dans Document d'archive
 
-Repris dans
+#
+##
+### ONTO / SALSAH
+##
+#
+- Auteur traduit dans Document d'archive
+- Repris dans / Is previous stage of (sia per Manuscript che per Publication)
+- Il tempo
+- Test Sipi
+Delete class PublicationInArchive because it does not exist in the previous db so the import would be too complicated.
+Publication check numero edizione e numero volumi (cardinality)
+
+Auteur traduit
+delete PublicationInarchive
+Update admin with new project description
+
+
+#
+##
+### KNORA
+##
+#
+Open issue (question) sur le temps
+
+
+
+#
+##
+### DOC 
+##
+#
+Avant de commencer la saisie manuelle (après l'import), créer protocole avec indications sur comment insérer les données et nommer les labels, dans un document externe (Salsah ne lit pas les commentaire des proprietés, mais oui ceux des classes)
+
+
 
 
 
 ####################
+##
 ## DECISO e CAPITO
+##
 ####################
 
 Nel fondo ci sono anche oggetti, documenti amministrativi, coupures de presse ... vogliamo inserire tutto questo? No ..., solo manoscritti. Tutto il resto sta bene in una nota, senza che debba avere il suo posto nella BD.
+Nel fondo c'è un solo manoscritto non di Roud, che è di Trakl.
 
 Commenti almeno in due lingue (en, fr). Label: fr, en, de.
 
@@ -28,32 +63,19 @@ Lieux, pas d'organisation hiérarchique, parce que chez Roud tout est canton de 
 
 Anche i dati cancellati rimangono.
 
+Les rdfs:comment des proprietés ne sont pas visibles dans Salsah. Les rdfs:comment des classes sont visible dans Salsah.
 
-
-
-##########################
-## PARLARNE CON EQUIPE
-##########################
-
+Bouton AddLink en haut à droite ne sert pas.
 
 
 
 
 
-##########################
-## QUESTIONS DASCH
-##########################
-
-Q: Où sont exploités les commentaires des propriétés ?
-Les indication sur comment remplir les champs (par example, poru les titres des documents "Pas de guillemets. Les titres-incipit sont donnés entre crochets, avec trois points à la fin (alt + .).") se mettent où, dans les commentaires ?
-Indications sur comment remplir le Label, vont où (en général on pourrait se dire que le label corresponde au titre, mais par exemple pour les évènements biographique c'est plus interessant d'avoir la date aussi) ? Dans un protocole externe ? Par exemple, pour les personnes, ça serait bien que les labels soit nom+prenom, parceque la recherche (pendant la saisie) se fait sur les premières trois lettres et ce n'est pas toujours facile de se souvenir des prénom (ou le contraire? Mais tenir en compte).
-A: Pas dans Salsah
-
-Q: Period: before / after / around; après / avant / vers
-A: 
-
-Add link ?
-NON IMPORTA
+#####################
+##
+## BULK IMPORT
+##
+#####################
 
 Download xsd for bulk import
 http://localhost:3333/v1/resources/xmlimportschemas/http%3A%2F%2Fwww.knora.org%2Fontology%2F0112%2Froud-oeuvres?email=root%40example.com&password=test
@@ -63,6 +85,31 @@ curl -X POST -d @testImport.xml http://elena.spadini%40unil.ch:k32V@localhost:33
 
 
 
-Nota: nel fondo c'è un solo manoscritto non di Roud, che è di Trakl.
+
+
+#######################
+##
+## PARLARNE CON EQUIPE
+##
+#######################
+
+
+
+
+
+
+
+######################
+##
+## QUESTIONS DASCH
+##
+######################
+
+
+Q: Period: before / after / around; après / avant / vers
+A: 
+
+
+
 
 
