update todo and start to look at standoff

--- a/todo.txt
+++ b/todo.txt
@@ -17,6 +17,10 @@
 - Test Sipi
 - Publication check numero edizione e numero volumi (cardinality)
 
+TESTO NELL'ONTOLOGIA !!!
+
+EditedText hasSource pub | ms
+EditedText hasWitness pub | ms
 
 
 #
