update after meeting with Dasch

--- a/todo.txt
+++ b/todo.txt
@@ -9,21 +9,14 @@
 
 #
 ##
-### ONTO / SALSAH
+### ONTO / SALSAH / KNORA
 ##
 #
 
-When we'll change the location of the cardinality (v2?), put 'isPreviousManuscript' after 'étape génétique'.
+Avant de faire de la saisie, fix guiOrder
+When we'll change the location of the guiOrder (v2 vanno insieme a cardinality), put 'isPreviousManuscript' after 'étape génétique'.
 
-
-
-
-#
-##
-### KNORA
-##
-#
-Sul Github di Knora, open Issue (type: question) sur la modelisation du temps
+Test XML dans Salsah, voir s'il y a des messages d'érreurs
 
 
 
@@ -32,6 +25,7 @@ Sul Github di Knora, open Issue (type: question) sur la modelisation du temps
 ### DOC 
 ##
 #
+
 Avant de commencer la saisie manuelle (après l'import), créer protocole avec indications sur comment insérer les données et nommer les labels, dans un document externe (Salsah ne lit pas les commentaire des proprietés, mais oui ceux des classes).
 
 LABEL (tout minuscule, pas d'accent)
@@ -77,23 +71,28 @@ There is no abstract property hasDirectSource, perché non si può non specifica
 
 Mentre Salsah 2 è un progetto a parte, Salsah 1 sta in Github dentro Knora (ticket frontend salsah, question)
 
+Gravsearch: Virtual Graph Search in Doc Knora, tipo linguaggio SPARQL per fare richieste complesse invece di chiedere una cosa per volta tramite l'API
 
+Per fare download dati da GraphDB, usare Turtle (anche se dice che perde qualcosa) o Json, entrambi funzionano.
 
-#####################
-##
-## BULK IMPORT
-##
-#####################
+On peut utiliser des espaces dans les labels
 
-Download xsd for bulk import
-http://localhost:3333/v1/resources/xmlimportschemas/http%3A%2F%2Fwww.knora.org%2Fontology%2F0112%2Froud-oeuvres?email=root%40example.com&password=test
+Pour insérer du XML, copier-coller dans le champ correspondant, qui dans Salsa est comme l'éditeur HTML mais sera possible view source. 
 
-Upload xml for bulk import
-curl -X POST -d @testImport.xml http://elena.spadini%40unil.ch:k32V@localhost:3333/v1/resources/xmlimport/http%3A%2F%2Fwww.knora.org%2Fontology%2F0112%2Froud-oeuvres
-
-
-Fiche --> Document d'archive (roud-ouvres:Manuscript), datation + datationcomment = hasDateEstablishedReadable
-Create rules for transforming datation into hasDateEstablishedComputable (if avant, create period with starting point at 1918, for example, etc.)
+SI PUÒ ENTRARE NELLA VIRTUAL MACHINE CREATA DA DOCKER (bash come ssh). Per esempio, per cambiare editore HTML ... Poi far partire webserver (bisogna cambiare qualcosa in public/js = https://github.com/dhlab-basel/Knora/blob/develop/salsah1/src/public/js/00_init_javascript.js)
+		docker exec -it salsah bash
+		bash-4.4# pwd
+		/salsah/public
+		bash-4.4# ls
+		app            default.less   index.html     less
+		ckeditor.css   favicon.ico    js             project-icons
+		default.css    icons          lang           vendor
+		bash-4.4# cd vendor/
+		bash-4.4# ll
+		bash: ll: command not found
+		bash-4.4# ls
+		arbor                  ckeditor               ckeditor_4.7.0
+		bootstrap              ckeditor-4.7.2-Editor  jQuery
 
 
 
@@ -118,18 +117,12 @@ Create rules for transforming datation into hasDateEstablishedComputable (if ava
 ######################
 
 
-GRAPHDB
-Changer l'ontologie comporte la destruction des données. On peut faire un backup et les re-uploader, non? Dans quel format télécharger les données dans GraphDB, pour les réutiliser après (json)?
-
-SALSAH - KNORA - ONTOLOGIE
-Espaces dans les labels ?
-Insérer texte xml dans Knora, comme pièce jointe? (easiness of editing)
-Page - Document
-Catena di isPreviousStageOf (item isPreviousStageOf x, x isPreviousStageOf y, y isPreviousStageOf ....)
-Time. Afficher les datations dans une timeline? Datation formalisé (avant 1950?)
 
 
-Feedback per Salsah2
+
+
+-------->>>>>>> Feedback per Salsah2  <<<<<<<----------
+
 Creare i label è noioso e error prone. Crearli automaticamente?
 Commenti delle property vanno usati
 
