import persons ok, now working on publications

--- a/bulkimport/transformation_scripts/import_publisher.ipynb
+++ b/bulkimport/transformation_scripts/import_publisher.ipynb
@@ -13,10 +13,10 @@
     "###\n",
     "\n",
     "import sys, csv ,operator\n",
-    "data = csv.reader(open('import_data/publishers.csv'))\n",
+    "data = csv.reader(open('../INPUT_data/publishers.csv'))\n",
     "sortedlist = sorted(data, key=operator.itemgetter(1))    # 1 specifies according to first column we want to sort\n",
     "#now write the sorte result into new CSV file\n",
-    "with open(\"import_data/publishers_sorted.csv\", \"w\") as f:\n",
+    "with open(\"../INPUT_data/publishers_sorted.csv\", \"w\") as f:\n",
     "  fileWriter = csv.writer(f, delimiter=',')\n",
     "  for row in sortedlist:\n",
     "      fileWriter.writerow(row)\n",
@@ -35,8 +35,8 @@
     "### DEDUPLICATE DATA (check manually at the end)\n",
     "###\n",
     "\n",
-    "reader=csv.reader(open('import_data/publishers_sorted.csv', 'r'), delimiter=',')\n",
-    "writer=csv.writer(open('import_data/publishers_sorted_distinct.csv', 'w'), delimiter=',')\n",
+    "reader=csv.reader(open('../INPUT_data/publishers_sorted.csv', 'r'), delimiter=',')\n",
+    "writer=csv.writer(open('../INPUT_data/publishers_sorted_distinct.csv', 'w'), delimiter=',')\n",
     "\n",
     "entries = set()\n",
     "\n",
@@ -70,7 +70,7 @@
     "\n",
     "import csv\n",
     "\n",
-    "f = open('import_data/publishers_sorted_distinct_manuallychecked.csv')\n",
+    "f = open('../INPUT_data/publishers_sorted_distinct_manuallychecked.csv')\n",
     "csv_f = csv.reader(f)   \n",
     "data = []\n",
     "\n",
@@ -142,8 +142,8 @@
     "from xml.etree import ElementTree as ET\n",
     "import csv\n",
     "\n",
-    "f = open('import_data/publishers_sorted_distinct_manuallychecked.csv')\n",
-    "o = open('xml/publishers.xml', 'w')\n",
+    "f = open('../INPUT_data/publishers_sorted_distinct_manuallychecked.csv')\n",
+    "o = open('../OUTPUT_xml/publishers.xml', 'w')\n",
     "\n",
     "csv_f = csv.reader(f)   \n",
     "data = []\n",
@@ -309,8 +309,8 @@
     "\n",
     "import csv\n",
     "\n",
-    "f = open('import_data/publishers_sorted_distinct_manuallychecked.csv')\n",
-    "o = open('xml/publishers_bahbah.xml', 'w')\n",
+    "f = open('../INPUT_data/publishers_sorted_distinct_manuallychecked.csv')\n",
+    "o = open('../OUTPUT_xml/publishers_bahbah.xml', 'w')\n",
     "\n",
     "csv_f = csv.reader(f)   \n",
     "data = []\n",
