--- a/todo.txt
+++ b/todo.txt
@@ -18,6 +18,11 @@ When we'll change the location of the guiOrder (v2 vanno insieme a cardinality),
 
 Test XML dans Salsah, voir s'il y a des messages d'érreurs
 
+Given Name and Family Name are both not mandatory (esempio di Aimée, ma esempio anche di famiglia Affolter)
+
+Add Disque a publication type nell'ontologia (Class)
+
+
 
 
 #
@@ -28,11 +33,13 @@ Test XML dans Salsah, voir s'il y a des messages d'érreurs
 
 Avant de commencer la saisie manuelle (après l'import), créer protocole avec indications sur comment insérer les données et nommer les labels, dans un document externe (Salsah ne lit pas les commentaire des proprietés, mais oui ceux des classes).
 
-LABEL (tout minuscule, pas d'accent)
+LABEL
+
 Document d'archive: doc_cote_premiermotdutitre
 Texte (si document): txt_cote_premiermotdutitre
 Texte (si publication): txt_
 Article: pub_titre_revue_annee
+Revue: period_
 Section d'un livre: pub_titre_livre_annee
 Livre: pub_titre_annee
 Personne: nom_prenom
