change onto 1: personHasGivenName not mandatory, example Famille Affolter; add Disque as publication type; create new class Author for publications, photo and works, different from Person because it has no notice and other properties of Person

--- a/todo.txt
+++ b/todo.txt
@@ -19,7 +19,7 @@ Given Name and Family Name are both not mandatory (esempio di Aimée, ma esempio
 
 Add Disque as publication type nell'ontologia (Class)
 
-Delete link tra pubblicazione e autore, add literal to property hasAuthor
+Create new class author (different from person because it has no notice etc.), for publications, photo and works
 
 Add hasContributors per Article (lo aggiungiamo a Publication, così appare dappertutto?)
 
